force-app/main/default/objects/GoodwillAssignment__c/GoodwillAssignment__c.object-meta.xml
<CustomObject>
    <label>Goodwill Assignment</label>
    <nameField>
        <displayFormat>GWA-{0000000}</displayFormat>
        <label>Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goodwill Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>