force-app/main/default/objects/GoodwillAssignment__c/fields/Gross_Rate__c.field-meta.xml
<CustomField>
    <fullName>Gross_Rate__c</fullName>
    <label>Gross Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>