force-app/main/default/objects/GoodwillAssignment__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Goodwill Assignments</relationshipLabel>
    <relationshipName>Goodwill_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>